--- a/5. Playwright.md
+++ b/5. Playwright.md
@@ -1,40 +1,44 @@
-Playwright is an open-source automation framework developed by Microsoft for reliable end-to-end testing of modern web applications. 
+**Playwright:** Microsoft develop pannina Modern Automation Testing Framework. Web apps (UI), API, Mobile web ellathayum automate panna use pannuvanga.
+(Selenium ku next-gen competitor nu sollalam 🔥)
 
-It provides a single API to automate Chromium, Firefox, and WebKit (including Safari) browsers across various platforms like Windows, macOS, and Linux.
+Playwright = Browser automation tool → Chrome, Edge, Firefox, WebKit (Safari engine) la automation run pannalam.
 
-**Reliable End-to-End Testing** Playwright's Auto wait capability ensures reliable and stable end-to-end for modern web applications even in the face of dynamic and complex user 
-interactions.
+**Supported languages:** JavaScript / TypeScript, Python, Java, .NET (C#)
 
-    **list of actionability** https://playwright.dev/docs/actionability
-    
-    * Oru action edukurathuku munnadi Playwright palavithamana actionability checks pannuthu nama enna actions pana nenaikuromo atha correct pandrathukaga
+**Architecture / Working Flow**
+<img width="874" height="491" alt="image" src="https://github.com/user-attachments/assets/d6acdd12-79c3-4da0-8f78-51363bb860af" />
+<img width="3840" height="2160" alt="image" src="https://github.com/user-attachments/assets/e001325d-c3b8-47ac-849d-4e92efa2f174" />
+<img width="1200" height="675" alt="image" src="https://github.com/user-attachments/assets/db0bbafa-ccbd-4a2f-8eeb-2ce8aa1dd522" />
 
-    * Nama enna action pananum nu command kudukuromo athuku munnadi relevent checks pass aagura varaikum intha playwright oda auto-wait helpfull ah irukku
+**Flow:** Test Script → Playwright API → Browser Engine → Web App
 
-    * Ipo required checks nama kudukura timeout la match or pass aagala na "TimeoutError" nu action fail aagidum
-      For example: locator.click() apdinu nama kudutha playwright oda intha auto-wait moolama element visible ah, stable ah athavathu animate aagitu irukka animation complete
-                    aagidicha innum solla pona elements complete ah load aagura varai, nama related element vera element aala obscured(Maraikapattu) vachi irunthalo, element enabled                          aagura varaikum wait panni ella checks um pannum nama kudutha timeout varai, intha time ulla intha checks la pass aagala na "TimeoutError" nu action fail aagidum,                         ithuvey java/Selenium la nama ellathukum thani thaniya condition poduvom but playwright ithu inbuild ah auto wait la ivlo vela pannuthu.
+**Advantages of Playwright**
+   * Cross-Browser Support: Single framework la Chromium (Chrome, Edge), Firefox, WebKit (Safari engine) Real cross-browser testing pannum.
+   * Auto-Wait Feature: Element load aagala na manual wait thevai illa. Button visible aagura varaikum auto wait and Page load auto sync - Flaky tests kammi.
+   * Faster Execution: Direct browser control, Selenium madhiri WebDriver middle layer illa - Speed jasthi.
+   * Headless + Headed Mode: Background la run pannalam (CI/CD), UI visible mode la debug pannalam
+   * Multiple Tabs / Windows Easy, New tab handle panna romba easy - Selenium la konjam kashtam
+   * Network Interception: API mock pannalam, Request/Response modify pannalam, Offline testing possible
+   * Built-in Screenshots & Video: Test failure → screenshot auto, Video record option
+   * Parallel Execution: Multi browser / multi test same time run pannalam.
+   * Codegen Tool: Record & generate script automatically.
 
-**Cross-Browser Compatibility** Playwright supports all major browsers including chromium-based (Chrome & Edge) Firefox, Safari (Webkit) and Opera, allowing you to test your web application
-across a wide range of browsers and platforms.
+**Disadvantages of Playwright**
+   * New Tool (Compared to Selenium) - Community konjam kammi, StackOverflow solutions kammi
+   * Language Limitation (Earlier) - Now Java support irundhalum — Selenium level maturity illa nu sila teams feel pannuvanga.
+   * No Native Mobile App Testing - Mobile web → yes but Native Android/iOS app → No ithukku Appium thevai.
+   * Selenium irundhu shift aagura testers ku: Async concept, Fixtures, Test runner setup Konjam pudhusu irukkum.
+   * Tooling Ecosystem - Selenium ku Huge plugins, Framework integrations irukku but Playwright ku growing stage.
 
-**Multiplatform Support** playwright works seemlessly on windows, MacOS, and Linux and also supports native mobile emulation for Google Chrome on Android and Safari on iOS, enabling
-Comprehensive testing across different devices and operating systems.
+<img width="811" height="497" alt="image" src="https://github.com/user-attachments/assets/b40a58cf-825a-42cd-a705-4669d783cdda" />
 
-**Multilingual Flexibility** Playwright provides language bindings for JS, TS, Java, Python, and C# (.net), allowing you to choose the programming language that best fits your team's
-performance and expertise.
+**When to Use Playwright?**
 
-******Playwright's Advanced Features******
+If
+   * Modern web apps (React, Angular, Vue)
+   * Fast execution venum
+   * CI/CD heavy usage
+   * Flaky tests avoid pannum
+   * Cross browser real testing venum
 
-**Tracing and Debugging** Leverage Playwright's built-in tracing and debugging capabilities, including automatic screenshots, test video recording and comprehensive logging, to simplify
-the process of identifying and resolving issues in your test suite. (Athavathu automatic SS, test video capturing steps info. log pandrathu ellamey automatic panikum)
-
-**Network Interception** Utilize Playwright's API testing libraries to intercept and validate network calls within your web application, enabling you to test edge case scenarios and
-ensure the resilience of your application's network interactions.
-
-**Browser Context Management** Explore Playwright's browser context feature, which allows you to save and transfer browser state across your test suite, improving test effiency and 
-reducing the overhead of setting up the same browser state of each test case. (Cookies ah capture panikum panitu ovvoru vatiyum first la irunthu pogama saved information la 
-irunthu eduthu execute aagum time saving kaaga)
-
-**Codegen Tool** Discover Playwright's codegen tool, which can generate test code by recording your actions, saving you time and effort in creating initial test cases and providing
-a starting point for further customization.
+**Interview One-liner** - Playwright is a modern browser automation framework by Microsoft that supports fast, reliable, cross-browser UI testing with built-in auto-wait, network mocking, and parallel execution.
