Update Playwright.md with library details
Added information about Playwright as a library and framework, emphasizing its open-source nature and supported languages.

--- a/5. Playwright.md
+++ b/5. Playwright.md
@@ -3,6 +3,10 @@
 
 Playwright = Browser automation tool → Chrome, Edge, Firefox, WebKit (Safari engine) la automation run pannalam.
 
+PlayWright - it itself is a library and a framework, no need to use any external framework like TestNG.
+
+Plawwright is a Open-source Node.JS library.
+
 **Supported languages:** JavaScript / TypeScript, Python, Java, .NET (C#)
 
 **Architecture / Working Flow**
