Enhance Playwright advantages with complex elements support
Added a point about handling complex elements in Playwright advantages.

--- a/5. Playwright.md
+++ b/5. Playwright.md
@@ -18,6 +18,7 @@ Plawwright is a Open-source Node.JS library.
 
 **Advantages of Playwright**
    * Cross-Browser Support: Single framework la Chromium (Chrome, Edge), Firefox, WebKit (Safari engine) Real cross-browser testing pannum.
+   * Handles Complex Elements: Easily interact with Shadow DOM elements, which is tricky for other tools.
    * Auto-Wait Feature: Element load aagala na manual wait thevai illa. Button visible aagura varaikum auto wait and Page load auto sync - Flaky tests kammi.
    * Faster Execution: Direct browser control, Selenium madhiri WebDriver middle layer illa - Speed jasthi.
    * Headless + Headed Mode: Background la run pannalam (CI/CD), UI visible mode la debug pannalam
