Enhance Playwright advantages section with details

--- a/5. Playwright.md
+++ b/5. Playwright.md
@@ -17,14 +17,15 @@ Plawwright is a Open-source Node.JS library.
 **Flow:** Test Script → Playwright API → Browser Engine → Web App
 
 **Advantages of Playwright**
-   * Cross-Browser Support: Single framework la Chromium (Chrome, Edge), Firefox, WebKit (Safari engine) Real cross-browser testing pannum.
+   * Cross-Browser/Platform/Language Support: Single framework la Chromium (Chrome, Edge), Firefox, WebKit (Safari engine) Real cross-browser testing pannum. Runs       on Windows,Mac & Linux. we can wright JavaScript, TypeScript, Python, Java, .NET (C#)
    * Handles Complex Elements: Easily interact with Shadow DOM elements, which is tricky for other tools.
    * Auto-Wait Feature: Element load aagala na manual wait thevai illa. Button visible aagura varaikum auto wait and Page load auto sync - Flaky tests kammi.
+   * Built-in Screenshots & Video: Test failure → screenshot auto, Video record option.
+   * Built-in Reporters: Various reports format like HTML, JSON, JUnit & more, also integrate 3rd party tool like Allure.
+   * Network Interception: API mock pannalam, Request/Response modify pannalam, Offline testing possible
    * Faster Execution: Direct browser control, Selenium madhiri WebDriver middle layer illa - Speed jasthi.
    * Headless + Headed Mode: Background la run pannalam (CI/CD), UI visible mode la debug pannalam
    * Multiple Tabs / Windows Easy, New tab handle panna romba easy - Selenium la konjam kashtam
-   * Network Interception: API mock pannalam, Request/Response modify pannalam, Offline testing possible
-   * Built-in Screenshots & Video: Test failure → screenshot auto, Video record option
    * Parallel Execution: Multi browser / multi test same time run pannalam.
    * Codegen Tool: Record & generate script automatically.
 
