Expand Playwright features and tools section
Added additional tools and features of Playwright, including Inspector and Tracing.

--- a/5. Playwright.md
+++ b/5. Playwright.md
@@ -27,7 +27,11 @@ Plawwright is a Open-source Node.JS library.
    * Headless + Headed Mode: Background la run pannalam (CI/CD), UI visible mode la debug pannalam
    * Multiple Tabs / Windows Easy, New tab handle panna romba easy - Selenium la konjam kashtam
    * Parallel Execution: Multi browser / multi test same time run pannalam.
-   * Codegen Tool: Record & generate script automatically.
+
+**There are aditional tools / internal plugins inbuilt in Playwright like**
+  * Inspector: Namma tests ah click points show panni debug  panna and locators ah verify pannalam
+  * Codegen Tool: Record our action & generate script automatically.
+  * Tracing(Trace Viewer): Capture Screenshots, Records video, retries flaky tests and log steps automatically, capture all the information to investigate the         test failures.
 
 **Disadvantages of Playwright**
    * New Tool (Compared to Selenium) - Community konjam kammi, StackOverflow solutions kammi
