Add 'Flaky Test' definition to Terminologies
Added definition for 'Flaky Test' in the terminologies document.

--- a/0. Terminologies.md
+++ b/0. Terminologies.md
@@ -5,3 +5,6 @@
    * oru application-oda full flow ah starting → ending varai real user maari test pannradhu. System la irukkura ella modules / integrations / DB / APIs / external systems ellam serthu, complete business process work aagudha nu validate pannradhu.
    * What all covered in E2E - UI (Frontend), Backend services, Database, APIs, 3rd-party integrations (Payment, Email, OTP), Network / environment, External systems.
    * Flow Representation - User Action → UI → API → Backend → DB → External Service → Response → UI
+
+**Flaky Test:** orey test case again and again run panna 1 time pass aagum another time fail aagum again run panna pass aagum stability illathathu.
+
