Update TypeScript introduction with OOP and compilation details
Explain TypeScript's compatibility with JavaScript and its features.

--- a/7. TypeScript_Intro.md
+++ b/7. TypeScript_Intro.md
@@ -23,3 +23,7 @@ In JS - whenever we create a variables, we no need to provide datatypes because 
   So ippo TypeScript and PlayWright rendumey MicroSoft product, independent ah function aagalam
 
   JS la ella OOPS concept um support panathu but TS ella OOPS concept um support pannum, athu illama neraiyo advanced concept like Generic, Collections nu innum neraiyo irukku
+
+  Nama TypeScript la enna code eluthinaalum atha JavaScript use panni run panalam, athey maari JavaScript code ah TypeScript use panni run panalam
+
+  TypeScript code ah nama direct ah compile panna mudiyathu - code run pana mudiyathu so athukku TypeScript code ah JavaScript code ah convert panni apparam JavaScript ah run panalam. Compiler JavaScript ku mattum tha irukku TypeScript ku irunthalum atha JavaScript ah convert panni tha run pannum. 
