--- a/5. Playwright.md
+++ b/5. Playwright.md
@@ -20,7 +20,7 @@ Plawwright is a Open-source Node.JS library.
    * Cross-Browser/Platform/Language Support: Single framework la Chromium (Chrome, Edge), Firefox, WebKit (Safari engine) Real cross-browser testing pannum. Runs       on Windows,Mac & Linux. we can wright JavaScript, TypeScript, Python, Java, .NET (C#)
    * Handles Complex Elements: Easily interact with Shadow DOM elements, which is tricky for other tools.
    * Auto-Wait Feature: Element load aagala na manual wait thevai illa. Button visible aagura varaikum auto wait and Page load auto sync - Flaky tests kammi.
-   * Built-in Screenshots & Video: Test failure → screenshot auto, Video record option.
+   * Built-in Screenshots & Video: Tracing(Trace Viewer): Capture Screenshots, Records video, retries flaky tests and log steps automatically, capture all the          information to investigate the test failures.
    * Built-in Reporters: Various reports format like HTML, JSON, JUnit & more, also integrate 3rd party tool like Allure.
    * Network Interception: API mock pannalam, Request/Response modify pannalam, Offline testing possible
    * Faster Execution: Direct browser control, Selenium madhiri WebDriver middle layer illa - Speed jasthi.
@@ -31,7 +31,6 @@ Plawwright is a Open-source Node.JS library.
 **There are aditional tools / internal plugins inbuilt in Playwright like**
   * Inspector: Namma tests ah click points show panni debug  panna and locators ah verify pannalam
   * Codegen Tool: Record our action & generate script automatically.
-  * Tracing(Trace Viewer): Capture Screenshots, Records video, retries flaky tests and log steps automatically, capture all the information to investigate the         test failures.
 
 **Disadvantages of Playwright**
    * New Tool (Compared to Selenium) - Community konjam kammi, StackOverflow solutions kammi
