--- a/7. TypeScript_Intro.md
+++ b/7. TypeScript_Intro.md
@@ -27,3 +27,5 @@ In JS - whenever we create a variables, we no need to provide datatypes because 
   Nama TypeScript la enna code eluthinaalum atha JavaScript use panni run panalam, athey maari JavaScript code ah TypeScript use panni run panalam
 
   TypeScript code ah nama direct ah compile panna mudiyathu - code run pana mudiyathu so athukku TypeScript code ah JavaScript code ah convert panni apparam JavaScript ah run panalam. Compiler JavaScript ku mattum tha irukku TypeScript ku irunthalum atha JavaScript ah convert panni tha run pannum. 
+
+ TypeScript -> JavaScript ah convert aagi JavaScript ethula vena run aagum
